<resources>
    <string name="app_name">StudentsApp</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Activity -->
    <string name="title_activity_splash">Splash Screen</string>
    <string name="splash_footer">Cómputo Móvil - 2016</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_non_existing_user">This username does not exist</string>
    <string name="error_password_not_match">Invalid password for this username</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="lbl_btn_login">Login</string>
    <string name="lbl_btn_logout">Log out</string>
    <string name="lbl_main_message">Current session</string>
    <string name="lbl_welcome_message">Welcome</string>
    <string name="lbl_loading_message">Loading...</string>
    <string name="empty_data_message">Empty Fields</string>
    <string name="error_failed_login">Error on login</string>
    <string name="lbl_username_prefix"><b>"Username: "</b></string>
    <string name="lbl_password_hint">Password</string>
    <string name="lbl_username_hint">Username</string>

    <!-- Students Activity -->
    <string name="title_activity_main">Lista de Estudiantes</string>
    <string name="successfully_add_student_message">Estudiante agregado!</string>
    <string name="successfully_update_student_message">Estudiante actualizado!</string>

    <!-- Student Details Activity -->
    <string name="loading">Loading..</string>
    <string name="student_id">Matrícula</string>
    <string name="student_name">Nombre</string>
    <string name="student_bachelors_degree">Licenciatura</string>
    <string name="title_activity_student_details">Editar estudiante</string>
    <string name="lbl_detail">Texto</string>
    <string name="student_lastName">Apellido</string>
    <string name="no_data">No hay datos</string>
    <string name="lbl_btn_edit">Editar</string>
    <string name="lbl_btn_save_edition">Guardar cambios</string>
    <string name="empty_student_message">Los datos del estudiante no pueden estar vacíos</string>
    <string name="lbl_no_results">No existen resultados</string>

    <!-- Add Student Activity -->
    <string name="title_activity_add_student">Nuevo estudiante</string>
    <string name="action_confirm">Nuevo estudiante</string>
    <string name="lbl_bachelors_degree">Licenciatura</string>
    <string name="prompt_bachelors_degree">Selecciona una licenciatura</string>
    <string name="error_enrollment_id">La matrícula debe ser de 8 dígitos</string>
    <string name="error_name">Error en nombre</string>
    <string name="error_last_name">Error en apellido</string>
    <string name="logout_confirm_message">Are you sure to logout?</string>
    <string name="delete_student_confirm_message">Are you sure to delete this student?</string>
    <string name="successfully_delete_student_message">Estudiante eliminado!</string>
    <string name="lbl_app_description_message">Swipe on items to edit or delete\n</string>
    <string name="action_edit">Editar</string>
    <string name="action_take_photo">Ups! Tomar foto no ha sido implementado</string>

</resources>
